fix dark mode bug

--- a/application/src/styles/globals.scss
+++ b/application/src/styles/globals.scss
@@ -6,9 +6,9 @@
 // This created some CSS problems, I think Tailwind already has a CSS reset so this isn't needed as well.
 
 /* tailwind */
-@import "tailwindcss/base";
-@import "tailwindcss/components";
-@import "tailwindcss/utilities";
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
 
 /* Global components */
 
@@ -16,24 +16,31 @@
 	--foreground-rgb: 0, 0, 0;
 	--background-start-rgb: 214, 219, 220;
 	--background-end-rgb: 255, 255, 255;
+	color-scheme: only light;
 }
 
+/* Firefox */
 @media (prefers-color-scheme: dark) {
 	:root {
-		--foreground-rgb: 255, 255, 255;
-		--background-start-rgb: 0, 0, 0;
-		--background-end-rgb: 0, 0, 0;
+		color-scheme: light;
+	}
+}
+
+/* Chrome */
+@media (forced-colors: active) {
+	:root {
+		color-scheme: light;
 	}
 }
 
 body {
-	color: rgb(var(--foreground-rgb));
+	color: rgb(var(--foreground-rgb)) !important;
 	background: linear-gradient(
 			to bottom,
 			transparent,
 			rgb(var(--background-end-rgb))
 		)
-		rgb(var(--background-start-rgb));
+		rgb(var(--background-start-rgb)) !important;
 
 	overflow-x: clip;
 }
